improved style, removed publi filter because of rendering issues on mobile safari, resolved bug for meta of media publi

--- a/public/src/vue/less/_publi-journal.less
+++ b/public/src/vue/less/_publi-journal.less
@@ -12,7 +12,6 @@
 
 & {
   color: #000;
-  filter: grayscale(100%);
   font-size: 14pt;
 }
 
