--- a/public/src/vue/style.less
+++ b/public/src/vue/style.less
@@ -20,6 +20,11 @@
 
 * {
   box-sizing: border-box;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
 }
 
 
@@ -503,6 +508,7 @@ body {
     position: relative;
     overflow: hidden;
     background-color: @c-bleuvert_fonce;
+
   }
 
 }
@@ -901,6 +907,11 @@ body {
       .c-orange;      
     }
 
+    img {
+      border-radius: 50%;
+      overflow: hidden;      
+    }
+
     > * {
       flex: 0 0 auto;
       display: flex;
@@ -1033,13 +1044,27 @@ body {
       flex-flow: row wrap;
       align-items: center;
       justify-content: center;      
+
+      svg {
+        width: 512px;
+        height: 512px;
+        border-radius: 50%;
+        overflow: hidden;        
+      }      
     }
 
-    // left panel
+    // right panel
     .mediaContainer {
       overflow: hidden;
       audio {
         height: 50%;
+      }
+
+      img[src*=svg] {
+        width: 512px;
+        height: 512px;
+        border-radius: 50%;
+        overflow: hidden;        
       }
     }
   }
@@ -1114,12 +1139,6 @@ body {
     .margin-vert-medium;
     .bg-blanc;
     box-shadow: 0px 2px 16px 0px rgba(0,0,0,.2);
-    -webkit-user-drag: none;
-    -khtml-user-drag: none;
-    -moz-user-drag: none;
-    -o-user-drag: none;
-    user-drag: none;
-
     transform-origin: top center;
 
     &.is--active {
@@ -1208,14 +1227,9 @@ body {
   position: absolute;
   cursor: -webkit-grab;
   user-select: none;
-  -webkit-user-drag: none;
-  -khtml-user-drag: none;
-  -moz-user-drag: none;
-  -o-user-drag: none;
-  user-drag: none;
 
-  min-width: 150px;
-  min-height: 150px;
+  min-width: 100px;
+  min-height: 100px;
 
   transition: transform .4s ease-out;
 
@@ -1241,6 +1255,12 @@ body {
       height: 100%;
       object-position: center;
       object-fit: cover;
+
+      -webkit-user-drag: none;
+      -khtml-user-drag: none;
+      -moz-user-drag: none;
+      -o-user-drag: none;
+      user-drag: none;
     }
   }
 
@@ -1259,6 +1279,12 @@ body {
     border: @t-borderSize dashed currentColor;
     transition: border .2s;
   
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+
     .is--hovered& {
       color: @c-gris_fonce;
     }
@@ -1291,6 +1317,7 @@ body {
     font-family: 'Fira Mono';
     font-size: 10pt;
     margin-top: 0.5em;    
+    white-space: pre-wrap;   
   }
 
   .m_mediaPublication--buttons {
@@ -1299,9 +1326,11 @@ body {
     right: 0;
     width: 100%;
     z-index: 2;
+    overflow: hidden;
 
     display: flex;
     justify-content: flex-end;
+    flex-flow: row wrap;
 
     > * {
       color: inherit;
@@ -1446,5 +1475,9 @@ body {
 
   .m_mediaPublication {
     filter: none !important;
+  }
+
+  .alertify-logs {
+    display: none;
   }
 }
